src/main/java/com/example/demo/error/exceptions/ResourceNotFoundException.java
package com.example.demo.error.exceptions;

import java.util.Scanner;

public class ResourceNotFoundException extends RuntimeException {
        public ResourceNotFoundException(String message) {
            super(message);
        }


}